* 2016.03.09 - adding soft description for compiler.llvm.android (arm,x86,x86_64)

* 2016.03.01 - adding soft description for CLBLAS, CLBLAST, CLTUNE

* 2016.02.18 - changing platform.accelerator -> platform.gpu

* 2016.02.13 - * adding support to automatically resolve, search and install dependencies 
                 (flag - quiet - useful when crowdsourcing optimization and machine learning)

* 2016.02.10 - * improving CLANG description for Android/ARM via Android NDK
               * improving CLANG version detection
               * fixing detection of platform features (correct reloading of existing features 
                 - useful for arch specific compiler flag crowdtuning)

* 2016.02.09 - * adding postfix for GCC env registration (such as -4.6)

* 2016.02.05 - * record all info during platform detection only 
                 when ck.cfg['record_all_platform_info']=='yes'.
                 Needed to avoid mess when recording local or global info
                 during experiment crowdsourcing.

* 2016.01.27 - * fixing installation of GCC trunk and LLVM trunk 
                 (preparing new engine to crowdsource optimizations)
               * adding support to select SW dependencies randomly
                 (useful to crowdsource experiments)

* 2016.01.16 - * adding UOA and UID of found platforms into detection stream

* 2016.01.12 - * adding possibility to enter and record name of platform, accelerator, cpu and OS
                 to local cfg if not automatically detected (for crowdtuning)

* 2016.01.11 - * fixing remote repo recaching if selecting different public CK server
                 during program optimization crowdsourcing
               * fixing automatic package installation bug (when crowdsourcing autotuning)

* 2016.01.04 - * adding 'show' function to platform.* to list all platforms 
                 participating in crowd-tuning and their parameters

* 2016.01.03 - * fixing exchange of information during crowd-tuning