@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "8217f73a34c3ba52", 
+  "backup_module_uid": "5e1100048ab875d7", 
+  "backup_module_uoa": "soft", 
+  "control": {
+    "author": "Grigori Fursin", 
+    "author_email": "Grigori.Fursin@cTuning.org", 
+    "author_webpage": "http://fursin.net", 
+    "copyright": "See CK COPYRIGHT.txt for copyright details", 
+    "engine": "CK", 
+    "iso_datetime": "2016-03-09T18:45:23.464929", 
+    "license": "See CK LICENSE.txt for licensing details", 
+    "version": [
+      "1", 
+      "6", 
+      "14"
+    ]
+  }, 
+  "data_name": "tool.texinfo"
+}
